--- a/Parker DSC530 Week#2.ipynb
+++ b/Parker DSC530 Week#2.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3ffacac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Display the text “Hello World! My name is ....\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "ae3c5b11",
    "metadata": {},
@@ -21,10 +31,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27da3764",
+   "id": "ad374a26",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Add two numbers together"
+   ]
   },
   {
    "cell_type": "code",
@@ -45,6 +57,16 @@
    ],
    "source": [
     "5 + 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e50f326",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Subtract a number from another number"
    ]
   },
   {
@@ -70,23 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a8312e55",
+   "execution_count": null,
+   "id": "6f6d2205",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "8 % 4"
+    "#Divide between two numbers"
    ]
   },
   {
@@ -112,6 +123,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9f8c2d80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Multiply two numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "d6db81ec",
    "metadata": {},
@@ -129,6 +150,16 @@
    ],
    "source": [
     "3 * 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7544b726",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Concatenate two strings together (any words)"
    ]
   },
   {
@@ -172,12 +203,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b717153e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a list of 4 items (can be strings, numbers, both)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "b3a5fa6f",
    "metadata": {},
    "outputs": [],
    "source": [
     "list = [2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b736387b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Append an item to your list (again, can be a string, number)"
    ]
   },
   {
@@ -206,6 +257,16 @@
    ],
    "source": [
     "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "755ce395",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a tuple with 4 items (can be strings, numbers, both)"
    ]
   },
   {
